--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,9 +14,6 @@ body {
     color: var(--color-text);
 }
 
-
-
-/*исчезающий placeholder при наведении*/
 input::-webkit-input-placeholder       {opacity: 1; transition: opacity 0.3s ease;}
 input::-moz-placeholder                {opacity: 1; transition: opacity 0.3s ease;}
 input:-moz-placeholder                 {opacity: 1; transition: opacity 0.3s ease;}
@@ -38,6 +35,12 @@ h2 {
     color: var(--color-white);
     font-weight: 500;
 }
+@media(max-width:480px) {
+    h2 {
+        font-size: 34px;
+        line-height: 38px;
+    }
+}
 h2 span {
     color: var(--color-main);
 }
@@ -58,10 +61,8 @@ h2 span {
     line-height: 50px;
     font-weight: 700;
     color:var(--color-white);
-
     text-decoration: none;
     z-index: 8;
-
 }
 .header__menu-body {
     display: flex;
@@ -287,11 +288,9 @@ body._lock {
     font-weight: 700;
     margin: 0 0 15px 0;
 }
-.main-block__card-description {
-}
+
 .main-block__right {
     margin: 30px 0 0 0;
-
 }
 .main-block__right img {
     width: 100%;
@@ -348,8 +347,7 @@ body._lock {
     .main-block__title {
         font-size: 32px;
         line-height: 46px;
-    }
-    
+    } 
 }
 
 .amazing {
@@ -359,13 +357,11 @@ body._lock {
     max-width: 1400px;
     margin: 0 auto;
 }
-.amazing__info {
-}
+
 .amazing__cards {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-   
+    justify-content: center; 
 }
 .collection__card {
     width: 32%;
@@ -409,18 +405,13 @@ body._lock {
     width: 100%;
     margin: 0 0 16px 0;
 }
-.amazing__card-title {
-}
-.amazing__card-price {
-}
 .amazing__card-content {
     display: flex;
     justify-content: space-between;
     width: 100%;
 }
 .amazing__card-content--left {
-    color: #838382;
-   
+    color: #838382;  
 }
 .amazing__card-icon {
     margin: 5px 0 0 0;
@@ -430,8 +421,7 @@ body._lock {
     display: inline-block;
     color: var(--color-white);
 }
-.amazing__card-content--right {
-}
+
 .amazing__card-button {
     padding: 14.5px 40px;
     border-radius: 8px;
@@ -446,8 +436,7 @@ body._lock {
 }
 @media(max-width:1024px) {
     .amazing__card-content {
-        flex-direction: column;
-        
+        flex-direction: column;   
     }
     .amazing__card-button {
        width: 100%;
@@ -562,14 +551,6 @@ input {
 .footer__content {
     display: flex;
 }
-.footer__content-left {
-}
-.footer__content-logo {
-}
-.footer__content-description {
-}
-.footer__row {
-}
 
 
 
@@ -586,16 +567,10 @@ input {
     justify-content: center;
     border-radius: 3px;
 }
-.footer__content-social:hover
 .footer__content-social:last-child {
     margin: 0;
 }
 
-
-
-.terms {
-
-}
 .terms__container {
     max-width: 1200px;
     margin: 0 auto;
@@ -806,8 +781,7 @@ margin: 0 0 40px 0;
 
 
 
-.footer {
-}
+
 .footer__container {
     max-width: 1300px;
     margin: 0 auto;
@@ -818,8 +792,6 @@ margin: 0 0 40px 0;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-}
-.footer__content-left {
 }
 .footer__content-center {
     display: flex;
@@ -838,8 +810,7 @@ margin: 0 0 40px 0;
 .footer__content-logo img {
     max-width: 60px;
 }
-.footer__content-left {
-}
+
 .footer__content-left--title {
     font-size: 24px;
     text-align: center;
@@ -854,11 +825,12 @@ margin: 0 0 40px 0;
     margin: 0 0 20px 0;
     text-align: center;
 }
-.footer__content-socials {
-}
 .footer__content-social {
     cursor: pointer;
     transition: background-color 0.5s ease;
+}
+.footer__content-social a {
+    width: 100%;
 }
 .footer__content-social:hover {
     background-color: var(--color-main);
@@ -906,6 +878,9 @@ margin: 0 0 40px 0;
     .footer__row {
         margin: 10px 0 0 0;
     }
+    .footer__row-link {
+        text-align: center;
+    }
 }
 
 .map {
@@ -925,9 +900,6 @@ margin: 0 0 40px 0;
         padding: 0 20px;
     }
 }
-
-
-
 
 .contact {
     margin: 0 0 152px 0;
@@ -983,12 +955,16 @@ margin: 0 0 40px 0;
         margin: 0 0 10px 0;
     }
     .contact__left-image {
-        max-width: 600px;
-        max-height: 300px;
+        max-width: 100%;
+        max-height: 400px;
         object-position: initial;
+        margin: 0 0 20px 0;
     }
     .contact {
         margin: 0 0 60px 0;
+    }
+    .contact__right {
+       width: 100%;
     }
 }
 @media(max-width:578px) {
@@ -1043,7 +1019,6 @@ margin: 0 0 40px 0;
 .gallery__container {
     max-width: 1300px;
     margin: 0 auto;
-    
 }
 
 .nft-gallery {
@@ -1051,10 +1026,9 @@ margin: 0 0 40px 0;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px; 
     padding: 20px;
-
-  }
+}
   
-  .nft-card {
+.nft-card {
     background-color: #1e1e2f;
     border-radius: 10px;
     padding: 10px;
@@ -1062,24 +1036,24 @@ margin: 0 0 40px 0;
     transition: transform 0.3s ease;
     position: relative;
     overflow: hidden;
-  }
+}
   
-  .nft-card img {
+.nft-card img {
     width: 100%;
     border-radius: 10px;
-  }
+}
   
-  .nft-card .owner {
+.nft-card .owner {
     color: #fff;
     font-size: 16px;
     margin-top: 10px;
-  }
+}
   
-  .nft-card:hover {
+.nft-card:hover {
     transform: scale(1.05); 
-  }
+}
   
-  .nft-card::after {
+.nft-card::after {
     content: "";
     position: absolute;
     top: 0;
@@ -1090,16 +1064,16 @@ margin: 0 0 40px 0;
     z-index: 1;
     opacity: 0;
     transition: opacity 0.3s ease;
-  }
+}
   
-  .nft-card:hover::after {
+.nft-card:hover::after {
     opacity: 1;
-  }
+}
   
-  .nft-card p {
+.nft-card p {
     position: relative;
     z-index: 2; 
-  }
+}
 
 
 
@@ -1113,6 +1087,7 @@ margin: 0 0 40px 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0 10px;
 }
 .nft__container-left {
     margin: 0 30px 0 0;
@@ -1132,7 +1107,33 @@ margin: 0 0 40px 0;
     text-indent: 40px;
     text-align: justify;
 }
-
+@media(max-width:678px) {
+    .nft-gallery { 
+        grid-template-columns: none;
+      }
+      .nft-card {
+       max-width: 100%;
+      }
+      .nft__container {
+        flex-direction: column;
+        align-items: center;
+      }
+      .nft__container-left img {
+        margin: 0 0 10px 0;
+    }
+    .nft__title {
+       text-align: center;
+    }
+    .nft__container-left {
+        margin: 0;
+    }
+}
+@media(max-width:480px) {
+    .nft__title {
+       font-size: 34px;
+       line-height: 38px;
+    }
+}
 
 
 .why {
@@ -1144,6 +1145,7 @@ margin: 0 0 40px 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0 10px;
 }
 .why__container-left {
     margin: 0 30px 0 0;
@@ -1152,7 +1154,7 @@ margin: 0 0 40px 0;
     margin: 0 0 40px 0;
 }
 .why__item {
-    list-style-type: circle;
+    list-style-type: none;
     max-width:600px;
     font-size: 20px;
     margin: 0 0 10px 0;
@@ -1186,7 +1188,7 @@ margin: 0 0 40px 0;
     .why__container-left {
         margin: 0;
     }
-}
+} 
 
 .works {
     margin: 0 0 90px 0;
@@ -1211,8 +1213,6 @@ margin: 0 0 40px 0;
 }
 .works__title {
     margin: 0 0 20px 0;
-}
-.works__list {
 }
 .works__item {
     align-items: center;
